Preparing the starting app

--- a/package.json
+++ b/package.json
@@ -4,11 +4,19 @@
   "description": "This is a node.js project that is part of the [Projects in ExpressJS Video](https://www.packtpub.com/web-development/projects-expressjs-video) course published by [Pack publishing](https://www.packtpub.com/)",
   "main": "app.js",
   "dependencies": {
-    "express": "^4.16.3"
+    "body-parser": "^1.18.2",
+    "cookie-parser": "^1.4.3",
+    "debug": "^3.1.0",
+    "express": "^4.16.3",
+    "hbs": "^4.0.1",
+    "morgan": "^1.9.0",
+    "path": "^0.12.7",
+    "serve-favicon": "^2.5.0"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ./bin/www"
   },
   "repository": {
     "type": "git",
