--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "express": "^4.16.3",
     "hbs": "^4.0.1",
     "morgan": "^1.9.0",
+    "nodemailer": "^4.6.4",
     "path": "^0.12.7",
     "serve-favicon": "^2.5.0"
   },
